
2. SOLR-811:  Allow a "deltaImportQuery" attribute in SqlEntityProcessor which is used for delta imports
              instead of DataImportHandler manipulating the SQL itself.
              (Noble Paul via shalin)

3. SOLR-842:  Better error handling in DataImportHandler with options to abort, skip and continue imports.
              (Noble Paul, shalin)

Optimizations
----------------------


Bug Fixes
----------------------
1. SOLR-800:  Deep copy collections to avoid ConcurrentModificationException in XPathEntityprocessor while streaming
              (Kyle Morrison, Noble Paul via shalin)

2. SOLR-823:  Request parameter variables ${dataimporter.request.xxx} are not resolved
              (Mck SembWever, Noble Paul, shalin)

3. SOLR-728:  Add synchronization to avoid race condition of multiple imports working concurrently
              (Walter Ferrara, shalin)

4. SOLR-742:  Add ability to create dynamic fields with custom DataImportHandler transformers
              (Wojtek Piaseczny, Noble Paul, shalin)

5. SOLR-832:  Rows parameter is not honored in non-debug mode and can abort a running import in debug mode.
              (Akshay Ukey, shalin)

6. SOLR-838:  The VariableResolver obtained from a DataSource's context does not have current data.
              (Noble Paul via shalin)

Documentation
----------------------

Other
----------------------
1. SOLR-782: Refactored SolrWriter to make it a concrete class and removed wrappers over SolrInputDocument
             (Noble Paul via shalin)

================== Release 1.3.0 20080915 ==================

Status
------
This is the first release since DataImportHandler was added to the contrib solr distribution.
The following changes list changes since the code was introduced, not since
the first official release.


Detailed Change List
--------------------

New Features
1. SOLR-700:  Allow configurable locales through a locale attribute in fields for NumberFormatTransformer.