@@ -28,6 +28,10 @@ New Features
 3. SOLR-842:  Better error handling in DataImportHandler with options to abort, skip and continue imports.
               (Noble Paul, shalin)
 
+4. SOLR-833:  A DataSource to read data from a field as a reader. This can be used, for example, to read XMLs
+              residing as CLOBs or BLOBs in databases.
+              (Noble Paul via shalin)
+
 Optimizations
 ----------------------
 
